--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -1048,6 +1048,734 @@ class Employee {...}
 
 5. 范例
 
+## 12.10 以委托取代子类（Replace Subclass with Delegate）
+
+1. 名称
+
+2. 一个简单的速写
+
+```javascript
+class Orde {
+    get daysToShip(){
+        return this._warehouse.daysToShip;
+    }
+}
+class PriorityOrder extends Order {
+    get daysToShip(){
+        return this.priorityPlan.daysToShip;
+    }
+}
+```
+
+重构为：
+
+```javascript
+class Order {
+    get daysToShip(){
+        return (this._priorityDelegate)
+        	? this._priorityDelegate.daysToShip
+        	: this._warehouse.daysToShip;
+    }
+}
+class PriorityOrderDelegate {
+    get daysToShip(){
+        return this._priorityPlan.daysToShip;
+    }
+}
+```
+
+3. 动机
+
+导致行为不同的原因可能有多种，但是继承只能用于处理一个方向上的变化
+
+4. 做法
+
+- 如果构造函数有多个调用者，首先用以工厂函数取代构造函数把构造函数包装起来
+- 创建一个空的委托类，这个类的构造函数应该接受所有子类特有的数据项，并且经常以参数的形式接受一个指回超类的引用
+- 在超类中添加一个字段，用于安放委托对象
+- 修改子类的创建逻辑，使其初始化上述委托字段，放入一个委托对象的实例
+- 选择一个子类中的函数，将其移入委托类
+- 使用搬移函数手法搬移上述函数，不要删除源类中的委托代码
+- 如果被搬移的源函数还在自了之外被调用了，就把留在源类中的委托代码从子类移到超类，并再委托代码之前加上卫语句，检查委托对象存在。如果子类之外已经没有其他调用者，就用移除死代码去掉已经没人使用的委托代码
+- 测试
+- 重复上述过程，直到子类中所有函数都搬到委托类
+- 找到所有调用子类构造函数的地方，逐一将其改为使用超类的构造函数
+- 测试
+- 运用移除死代码去掉子类
+
+5. 范例
+
+- 范例一：
+
+```javascript
+class Booking {
+    constructor(show, date){
+        this._show = show;
+        this._date = date;
+    }
+    get hasTalkback(){
+        return this._show.hasOwnProperty('talkback') && !this.isPeakDay;
+    }
+    get basePrice(){
+        let result = this._show.price;
+        if (this.isPeakDay) result += Math.round(result * 0.15);
+        return result;
+    }
+}
+class PremiumBooking extend Booking {
+    constructor(show, date, extras){
+        super(show, date);
+        this._extras = extras;
+    }
+    get hasTalkback(){
+        return this._show.hasOwnProperty('talkback');
+    }
+    get basePrice(){
+        return Math.round(super.basePrice + this._extras.premiumFee);
+    }
+    get hasDinner(){
+        return this._extras.hasOwnProperty('dinner') && !this.isPeakDay;
+    }
+}
+// 客户端1
+aBooking = new Booking(show, date);
+// 客户端2
+aBooking = new PremiumBooking(show, date, extras);
+```
+
+先用工厂函数取代构造函数
+
+```javascript
+function createBooking(show, date){
+    return new Booking(show, date);
+}
+function createPremiumBooking(show, date, extras){
+    return new PremiumBooking(show, date, extras); 
+}
+// 客户端1
+aBooking = createBooking(show, date);
+// 客户端2
+aBooking = createPremiumBooking(show, date, extras);
+```
+
+然后新建一个委托类
+
+```javascript
+class PremiumBookingDelegate {
+    constructor(hostBooking, extras){
+        this._host - hostBooking;
+        this._extras = extras;
+    }
+}
+```
+
+就新建的委托类对象与Booking对象关联起来
+
+```javascript
+function createPremiumBooking(show, date, extras){
+    const result = new PremiumBooking(show, date, extras); 
+    result._bePremium(extras);
+    return result
+}
+class Booking {
+    constructor(show, date){
+        this._show = show;
+        this._date = date;
+    }
+    get hasTalkback(){
+        return this._show.hasOwnProperty('talkback') && !this.isPeakDay;
+    }
+    get basePrice(){
+        let result = this._show.price;
+        if (this.isPeakDay) result += Math.round(result * 0.15);
+        return result;
+    }
+    _bePremium(extras){
+        this._premiumDelegate = new PremiumBookingDelegate(this, extras);
+    }
+}
+```
+
+使用搬移函数把子类中的函数搬到委托类中
+
+```javascript
+class PremiumBookingDelegate {
+    constructor(hostBooking, extras){
+        this._host - hostBooking;
+        this._extras = extras;
+    }
+    get hasTalkback(){
+        return this._host._show.hasOwnProperty('talkback');
+    }
+}
+class Booking {
+    constructor(show, date){
+        this._show = show;
+        this._date = date;
+    }
+    get hasTalkback(){
+        return (this._premiumDelegate)
+        	? this._premiumDelegate.hasTalkback
+        	: thsi._show.hasOwnProperty('talkback') && !this.isPeakDay;
+    }
+    get basePrice(){
+        let result = this._show.price;
+        if (this.isPeakDay) result += Math.round(result * 0.15);
+        return result;
+    }
+    _bePremium(extras){
+        this._premiumDelegate = new PremiumBookingDelegate(this, extras);
+    }
+}
+class PremiumBooking extend Booking {
+    constructor(show, date, extras){
+        super(show, date);
+        this._extras = extras;
+    }
+    get basePrice(){
+        return Math.round(super.basePrice + this._extras.premiumFee);
+    }
+    get hasDinner(){
+        return this._extras.hasOwnProperty('dinner') && !this.isPeakDay;
+    }
+}
+```
+
+下面处理basePrice函数
+
+```javascript
+class PremiumBookingDelegate {
+    constructor(hostBooking, extras){
+        this._host - hostBooking;
+        this._extras = extras;
+    }
+    get hasTalkback(){
+        return this._host._show.hasOwnProperty('talkback');
+    }
+    extendBasePrice(base){
+        return Math.round(base + this._extras.premiumFee);
+    }
+}
+class Booking {
+    constructor(show, date){
+        this._show = show;
+        this._date = date;
+    }
+    get hasTalkback(){
+        return (this._premiumDelegate)
+        	? this._premiumDelegate.hasTalkback
+        	: thsi._show.hasOwnProperty('talkback') && !this.isPeakDay;
+    }
+    get basePrice(){
+        let result = this._show.price;
+        if (this.isPeakDay) result += Math.round(result * 0.15);
+        return (this._permiumDelegate)
+        	? this._premiumDelegate.extendBasePrice(result)
+        	: result;
+    }
+    _bePremium(extras){
+        this._premiumDelegate = new PremiumBookingDelegate(this, extras);
+    }
+}
+class PremiumBooking extend Booking {
+    constructor(show, date, extras){
+        super(show, date);
+        this._extras = extras;
+    }
+    get basePrice(){
+        return Math.round(super.basePrice + this._extras.premiumFee);
+    }
+    get hasDinner(){
+        return this._extras.hasOwnProperty('dinner') && !this.isPeakDay;
+    }
+}
+```
+
+最后把只存在一个子类中的函数hasDinner从子类移到委托类
+
+```javascript
+class PremiumBookingDelegate {
+    constructor(hostBooking, extras){
+        this._host - hostBooking;
+        this._extras = extras;
+    }
+    get hasTalkback(){
+        return this._host._show.hasOwnProperty('talkback');
+    }
+    extendBasePrice(base){
+        return Math.round(base + this._extras.premiumFee);
+    }
+    get hasDinner(){
+        return (this._premiumDelegate)
+        	? this._premiumDelegate.hasDinner
+        	: undefined;
+    }
+}
+```
+
+删除子类
+
+```javascript
+class PremiumBookingDelegate {
+    constructor(hostBooking, extras){
+        this._host - hostBooking;
+        this._extras = extras;
+    }
+    get hasTalkback(){
+        return this._host._show.hasOwnProperty('talkback');
+    }
+    extendBasePrice(base){
+        return Math.round(base + this._extras.premiumFee);
+    }
+    get hasDinner(){
+        return (this._premiumDelegate)
+        	? this._premiumDelegate.hasDinner
+        	: undefined;
+    }
+}
+class Booking {
+    constructor(show, date){
+        this._show = show;
+        this._date = date;
+    }
+    get hasTalkback(){
+        return (this._premiumDelegate)
+        	? this._premiumDelegate.hasTalkback
+        	: thsi._show.hasOwnProperty('talkback') && !this.isPeakDay;
+    }
+    get basePrice(){
+        let result = this._show.price;
+        if (this.isPeakDay) result += Math.round(result * 0.15);
+        return (this._permiumDelegate)
+        	? this._premiumDelegate.extendBasePrice(result)
+        	: result;
+    }
+    _bePremium(extras){
+        this._premiumDelegate = new PremiumBookingDelegate(this, extras);
+    }
+}
+function createBooking(show, date){
+    return new Booking(show, date);
+}
+function createPremiumBooking(show, date, extras){
+    const result = new Booking(show, date);
+    result._bePremium(extras);
+    return result;
+}
+// 客户端1
+aBooking = createBooking(show, date);
+// 客户端2
+aBooking = createPremiumBooking(show, date, extras);
+```
+
+- 范例二：取代继承体系
+
+```javascript
+function createBird(data){
+    switch(data.type){
+        case 'EuropeanSwallow':
+            return new EuropeanSwallow(data);
+        case 'AfricanSwallow':
+            return new AfricanSwallow(data);
+        case 'NorweigianBlueParrot':
+            return new NorweigianBlueParrot(data);
+        default:
+            return new Bird(data);
+    }
+}
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){return null;}
+}
+class EuropeanSwallow extends Bird {
+    get airSpeedVelocity(){return 35;} 
+}
+class AfricanSwallow extends Bird {
+    constructor(data){
+        super(data);
+        this._numberOfCoconuts = data.numberOfCoconuts;
+    }
+    get airSpeedVelocity(){return 40 - 2 * this._numberOfCoconuts;}
+}
+class NorweigianBlueParrot extends Bird {
+    constructor(data){
+        super(data);
+        this._voltage = data.vpltage;
+        this._isNailed = data.isNailed;
+    }
+    get plumage(){
+        if (this._voltage > 100) return "scorched";
+        else return this._plumage || "beautiful";
+    }
+    get airSpeedVelocity(){
+        return (this._isNailed) > 0 : 10 + this._voltage / 10;}
+}
+```
+
+先给EuropeanSwallow创建一个空的委托类
+
+```javascript
+class EuropeanSwallowDelegate {}
+```
+
+再Bird类新建一个函数，根据类型码选择适当的委托对象
+
+```javascript
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+        this._speciesDelegate = this.selectSpeciesDelegate(data);
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){return null;}
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate();
+            default: return null;
+        }
+    }
+}
+```
+
+把airSpeedVelocity函数搬移到委托对象中
+
+```javascript
+class EuropeanSwallowDelegate {
+        get airSpeedVelocity(){return 35;} 
+}
+class EuropeanSwallow extends Bird {
+    get airSpeedVelocity(){
+        return this._speciesDelegate.airSpeedVelocity;
+    } 
+}
+```
+
+修改超类的airSpeedVelocity函数
+
+```javascript
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){
+        return this._speciesDelegate ? this._speciesDelegate.airSpeedVelocity : null;
+    }
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate();
+            default: return null;
+        }
+    }
+}
+```
+
+然后删除子类EuropeanSwallow
+
+```javascript
+function createBird(data){
+    switch(data.type){
+        case 'AfricanSwallow':
+            return new AfricanSwallow(data);
+        case 'NorweigianBlueParrot':
+            return new NorweigianBlueParrot(data);
+        default:
+            return new Bird(data);
+    }
+}
+```
+
+接下来处理AfricanSwallow子类，先创建委托类
+
+```javascript
+class AfricanSwallowDelegate {
+    constructor(data){
+	this._numberOfCoconuts = data.numberOfCoconuts;    }
+}
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){
+        return this._speciesDelegate ? this._speciesDelegate.airSpeedVelocity : null;
+    }
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate();
+            case 'AfricanSwallow':
+            	return new AfricanSwallowDelegate(data);
+            default: return null;
+        }
+    }
+}
+```
+
+同样把airSpeedVelocity函数搬移到委托类
+
+```javascript
+class AfricanSwallowDelegate {
+    constructor(data){
+		this._numberOfCoconuts = data.numberOfCoconuts;
+    }
+	get airSpeedVelocity(){return 40 - 2 * this._numberOfCoconuts;}
+}
+class AfricanSwallow extends Bird {
+    get airSpeedVelocity(){return this._speciesDelegate.airSpeedVelocity;}
+}
+```
+
+然后删除AfricanSwallow子类
+
+```javascript
+function createBird(data){
+    switch(data.type){
+        case 'NorweigianBlueParrot':
+            return new NorweigianBlueParrot(data);
+        default:
+            return new Bird(data);
+    }
+}
+```
+
+接下来处理NorweigianBlueParrot子类，最终结果
+
+```javascript
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){
+        return this._speciesDelegate ? this._speciesDelegate.airSpeedVelocity : null;
+    }
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate();
+            case 'AfricanSwallow':
+            	return new AfricanSwallowDelegate(data);
+            case 'NorweigianBlueParrot':
+            	return new NorweigianBlueParrotDelegate(data);
+            default: return null;
+        }
+    }
+}
+class NorweigianBlueParrotDelegate {
+    constructor(data){
+        this._voltage = data.vpltage;
+        this._isNailed = data.isNailed;
+    }
+    get airSpeedVelocity(){
+        return (this._isNailed) > 0 : 10 + this._voltage / 10;
+    }
+}
+```
+
+然后将plumage函数搬移到委托类中
+
+```javascript
+class NorweigianBlueParrotDelegate {
+    constructor(data, bird){
+        this._bird = bird;        
+        this._voltage = data.vpltage;
+        this._isNailed = data.isNailed;
+    }
+    get plumage(){
+        if (this._voltage > 100) return "scorched";
+        else return this._plumage || "beautiful";
+    }
+    get airSpeedVelocity(){
+        return (this._isNailed) > 0 : 10 + this._voltage / 10;
+    }
+}
+class NorweigianBlueParrot extends Bird {
+    constructor(data){
+        this._voltage = data.vpltage;
+        this._isNailed = data.isNailed;
+    }
+    get plumage(){
+        this.__speciesDelegate.plumage;
+    }
+    get airSpeedVelocity(){
+        return this.__speciesDelegate.airSpeedVelocity;
+    }
+}
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+    }
+    get name(){return this._name;}
+    get plumage(){return this._plimage || "average";}
+    get airSpeedVelocity(){
+        return this._speciesDelegate ? this._speciesDelegate.airSpeedVelocity : null;
+    }
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate();
+            case 'AfricanSwallow':
+            	return new AfricanSwallowDelegate(data);
+            case 'NorweigianBlueParrot':
+            	return new NorweigianBlueParrotDelegate(data, this);
+            default: return null;
+        }
+    }
+}
+```
+
+去除子类的plumage函数，使用提炼超级类
+
+```javascript
+class SpeciesDelegate {
+    constructor(data, bird){
+        this._bird = bird;
+    }
+    get plumage(){
+        return this._bird._plumage || "average";
+    }
+}
+class EuropeanSwallowDelegate extends SpeciesDelegate {}
+class AfricanSwallowDelegate extends SpeciesDelegate {
+    constryctor(data, bird){
+        spuer(data, bird);
+        this._numberOfCounts = data.numberOfCounts;
+    }
+}
+class NorweigianBlueParrotDelegate extends SpeciesDelegate{
+    constructor(data, bird){
+        super(data, bird);
+        this._voltage = data.voltage;
+        this._isNailed = data.isNailed;
+    }
+}
+```
+
+有了共同的超级类之后可以把一些字段和函数搬移到超级类中，最终结果如下：
+
+```javascript
+function createBird(data){
+    return new Bird(data);
+}
+class Bird {
+    constructor(data){
+        this._name  data.name;
+        this._plumage = data.plumage;
+        this._speciesDelegate = this.selectSpeciesDelegate(data);        
+    }
+    get name(){return this._name;}
+    get plumage(){return this._speciesDelegate.plumage;}
+    get airSpeedVelocity(){return this._speciesDelegate.airSpeedVelocity;}
+    selectSpeciesDelegate(data){
+        switch (data.type){
+            case 'EuropeanSwallow':
+                return new EuropeanSwallowDelegate(data, this);
+            case 'AfricanSwallow':
+            	return new AfricanSwallowDelegate(data, this);
+            case 'NorweigianBlueParrot':
+            	return new NorweigianBlueParrotDelegate(data, this);
+            default: return new SpeciesDelegate(data, this);
+        }
+    }
+}
+class SpeciesDelegate {
+    constructor(data, bird){
+        this._bird = bird;
+    }
+    get plumage(){
+        return this._bird._plumage || "average";
+    }
+    get airSpeedVelocity(){return nul;}
+}
+class EuropeanSwallowDelegate extends SpeciesDelegate {
+   get airSpeedVelocity(){return 35;} 
+}
+class AfricanSwallowDelegate extends SpeciesDelegate {
+    constryctor(data, bird){
+        spuer(data, bird);
+        this._numberOfCounts = data.numberOfCounts;
+    }
+    get airSpeedVelocity(){
+        return 40 - 2 * this._numberOfCounts;
+    } 
+}
+class NorweigianBlueParrotDelegate extends SpeciesDelegate{
+    constructor(data, bird){
+        super(data, bird);
+        this._voltage = data.voltage;
+        this._isNailed = data.isNailed;
+    }
+    get airSpeedVelocity(){
+        return (this._isNailed) > 0 : 10 + this._voltage / 10; 
+    }
+    get plumage(){
+        if (this._voltage > 100) return "scorched";
+        else return this._bird._plumage || "beautifull";
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
