--- a/refactoring/12/处理继承关系.md
+++ b/refactoring/12/处理继承关系.md
@@ -1732,9 +1732,149 @@ class NorweigianBlueParrotDelegate extends SpeciesDelegate{
 }
 ```
 
+## 12.11 以委托取代超类（Replace Suberclass with Delegate）
 
+1. 名称
 
+2. 一个简单的速写
 
+```javascript
+class List {...}
+class Stack extends List {...}
+```
+
+重构为：
+
+```javascript
+class Stack {
+    constructor(){
+        this._storage = new List();
+    }
+}
+class List {...}
+```
+
+3. 动机
+
+如果超类的一些函数对子类并不适用，就说明不应该通过继承来获得超类的功能
+
+4. 做法
+
+- 再子类中新建一个字段，使其引用超类的一个对象，并就这个委托引用初始化为超类的新实例
+- 针对超类的每个函数，在子类中创建一个转发函数，就调用请求转发给委托引用。每转发一块完整逻辑，都要执行测试
+- 当所有超类都被转发函数覆写后，就可以去掉继承关系
+
+5. 范例
+
+```javascript
+class CatalogItem {
+    constructor(id, title, tags){
+        this._id = id;
+        this._title = title;
+        this._tags = tags;
+    }
+    get id(){return this._id;}
+    get title(){return this._title;}
+    hasTag(arg){return this._tags.includes(arg);}
+}
+class Scroll extends CatalogItem {
+    constructor(id, title, tags, dateLastCleaned){
+        super(id, title, tags);
+        this._lastCleaned = dateLastCleaned;
+    }
+    needsCleaning(targetDate){
+        const threshold = this.hasTag("revered") ? 700 : 1500;
+        return this.daysSinceLastCleaning(targetDate) > threshold;
+    }
+    daysSinceLastCleaning(targetDate){
+        return this._lastCleaned.until(targetDate, shronoUtil.DAYS);
+    }
+}
+```
+
+首先在Scroll类中创建一个属性，令其指向一个新建的CatalogItem实例
+
+```javascript
+class Scroll extends CatalogItem {
+    constructor(id, title, tags, dateLastCleaned){
+        super(id, title, tags);
+        this._catalogItem = new CatalogItem(id, title, tags);
+        this._lastCleaned = dateLastCleaned;
+    }
+    needsCleaning(targetDate){
+        const threshold = this.hasTag("revered") ? 700 : 1500;
+        return this.daysSinceLastCleaning(targetDate) > threshold;
+    }
+    daysSinceLastCleaning(targetDate){
+        return this._lastCleaned.until(targetDate, shronoUtil.DAYS);
+    }
+}
+```
+
+然后在子类中用到的所有超类的函数，逐一为它们创建转发函数
+
+```javascript
+class Scroll extends CatalogItem {
+    constructor(id, title, tags, dateLastCleaned){
+        super(id, title, tags);
+        this._catalogItem = new CatalogItem(id, title, tags);
+        this._lastCleaned = dateLastCleaned;
+    }
+    get id(){return this._catalogItem.id;}
+    get title(){return this._catalogItem.title;}
+    hasTag(aString){return this._catalogItem.hasTag(aString);}
+    needsCleaning(targetDate){
+        const threshold = this.hasTag("revered") ? 700 : 1500;
+        return this.daysSinceLastCleaning(targetDate) > threshold;
+    }
+    daysSinceLastCleaning(targetDate){
+        return this._lastCleaned.until(targetDate, shronoUtil.DAYS);
+    }
+}
+```
+
+去除继承关系
+
+```javascript
+class Scroll {
+    constructor(id, title, tags, dateLastCleaned){
+        this._catalogItem = new CatalogItem(id, title, tags);
+        this._lastCleaned = dateLastCleaned;
+    }
+    get id(){return this._catalogItem.id;}
+    get title(){return this._catalogItem.title;}
+    hasTag(aString){return this._catalogItem.hasTag(aString);}
+    needsCleaning(targetDate){
+        const threshold = this.hasTag("revered") ? 700 : 1500;
+        return this.daysSinceLastCleaning(targetDate) > threshold;
+    }
+    daysSinceLastCleaning(targetDate){
+        return this._lastCleaned.until(targetDate, shronoUtil.DAYS);
+    }
+}
+```
+
+将原来超类中的字段搬移到子类
+
+```javascript
+class Scroll {
+    constructor(id, title, tags, dateLastCleaned){
+        this._id = id;
+        this._catalogItem = new CatalogItem(id, title, tags);
+        this._lastCleaned = dateLastCleaned;
+    }
+    get id(){return this..id;}
+    get title(){return this._catalogItem.title;}
+    hasTag(aString){return this._catalogItem.hasTag(aString);}
+    needsCleaning(targetDate){
+        const threshold = this.hasTag("revered") ? 700 : 1500;
+        return this.daysSinceLastCleaning(targetDate) > threshold;
+    }
+    daysSinceLastCleaning(targetDate){
+        return this._lastCleaned.until(targetDate, shronoUtil.DAYS);
+    }
+}
+```
 
 
 
