--- a/数据结构与算法之美/10.递归.md
+++ b/数据结构与算法之美/10.递归.md
@@ -5,4 +5,9 @@
 ### 如何编写递归代码
 - 写出递推公式，找到终止条件
 - 写递归代码的关键是找到如何将大问题分解为小问题的规律，并且基于此写出递推公式，然后再推敲终止条件，最后将递推公式和终止条件翻译成代码
-- 
+### 递归的优缺点
+- 优点：代码的表达能力很强，写起来很简洁
+- 缺点：空间复杂度高、有堆栈溢出风险、存在重复计算、过多的函数调用会耗时较多等
+### 常见问题以及解决方案
+- 堆栈溢出：可以声明一个全局变量来控制递归的深度，从而避免堆栈溢出
+- 重复计算：通过某种数据结构来保存已经求解过的值，从而避免重复计算
