✨ feat(MergeTree): MergeTree的存储格式
MergeTree的创建方式补充
MergeTree的存储结构

--- a/clickhouse/6.MergeTree原理剖析.md
+++ b/clickhouse/6.MergeTree原理剖析.md
@@ -1,10 +1,14 @@
 ClickHouse拥有非常庞大的表引擎体系，目前包含六大类20多种表引擎：合并树、外部存储、内存、文件、接口和其他。
 
 MergeTree作为合并树家族种最基础的表引擎，提供了主键索引、数据分区。数据副本。数据采样等基本能力，其他表引擎则在MergetTree的基础上各有所长。
+
 ### MergeTree的创建方式和存储结构
+
 MergeTree在写入一批数据时，数据总会以数据片段的形式写入磁盘，且数据片段不可修改。为了避免片段过多，会通过后台线程，定期合并和谐数据片段，属于相同分区的数据片段会被合并成一个新的片段。
+
 #### MergeTree的创建方式
-```sql 
+
+```sql
 CREATE TABLE [IF NOT EXISTS] [db_name.]table_name (
     name1 [type] [DEFAULT|MATERIALIED|ALIAS exper],
     name2 [type] [DEFAULT|MATERIALIED|ALIAS exper],
@@ -16,6 +20,28 @@ CREATE TABLE [IF NOT EXISTS] [db_name.]table_name (
 [SAMPLE BY expr]
 [SETTINGS name=value,...]
 ```
+
 1. PARTITION BY：分区键，用于指定表数据以何种标准进行分区。可以是单列字段，也可以通过元组的形式使用多列字段，同时也支持使用列表达式。如果不声明分区键，则会生成一个名为all的分区
 2. ORDER BY：排序键，用于指定在一个数据片段内数据以何种标准排序，默认主键和排序键相同。可以是单列字段，也可以通过元组的形式使用多列字段
 3. PRIMARY KEY：主键，一般情况下，在单个数据片段内，数据与一级索引以相同的规则升序排列
+4. SAMPLE BY：抽样表达式，用于声明数据以何种标准进行采样。如果配置了此项，那么主键种也需要声明同样的表达式
+5. SETTINGS index_granularity：表示索引的粒度，默认值是8192，也就是说在默认情况下，每间隔8192行数据才生成一条索引
+6. SETTINGS index_granularity_bytes：自适应间隔大小，用于根据每次写入数据的体量大小，动态划分索引间隔，默认是10M
+7. SETTINGS enable_mixed_granularity_parts：是否开始自适应索引间隔的功能，默认开启
+8. SETTINGS merge_with_ttl_timeout：MergeTree的ttl功能
+9. SETTINGS storage_policy：多路径的存储策略
+
+#### MergeTree的存储结构
+
+1. partition：分区目录余下各类文件都以分区目录的形式被组织存放，属于相同分区的数据，最终被合并到同一个分区目录
+2. checksums.txt：校验文件，使用二进制格式存储，保存了余下各类文件的size大小以及size的哈希值，用于快速校验文件的完整性和正确性
+3. columns.txt：列信息文件，使用明文格式存储，用于保存此数据分区下的列字段信息
+4. count.txt：计数文件，使用明文格式存储，用于记录当前数据分区目录下数据的总行数
+5. primary.txt：一级索引文件，使用二进制格式存储，用于存放稀疏索引，一张MergeTree表只能声明一次一级索引。
+6. [Column].bin：数据文件，使用压缩格式存储，默认为LZ4压缩格式，用于存储某一列的数据。每一个列字段都有一个独立的bin数据文件。
+7. [Column].mrk：列字段标记文件，使用二进制格式存储。标记文件保存了bin文件中数据的偏移信息。标记文件与稀疏索引对齐，又与bin文件一一对应，索引MergeTree通过标记文件建立了primary.idx稀疏索引与bin数据文件之间的映射关系，及通过稀疏索引找到对应数据的偏移量信息，再通过偏移量直接从bin文件读物数据。
+8. [Column].mrk2：如果使用了自适应大小的索引间隔，则标记文件会以mrk2命名。
+9. partition.dat和minmax_[Column].idx：如果使用了分区键，则额外生成这两个索引文件，使用二进制格式存储。partition.dat用于保存当前分区下分区表达式最终生成的值；minmax索引用于记录当前分区下分区字段对应原始数据的最小和最大值。在这些分区索引的作用下，进行数据查询时能够快速跳过不必要的数据分区目录，从而减少最终需要扫描的数据范围。
+10. skp_idx_[Column].idx与skp_idx_[Column].mrk：使用二级索引时生成的二级索引与标记文件，使用二进制格式存储。
+
+### 数据分区
