✨ feat(分区目录): 分区目录合并
分区目录的命名规则
分区目录的合并过程

--- a/clickhouse/6.MergeTree原理剖析.md
+++ b/clickhouse/6.MergeTree原理剖析.md
@@ -45,3 +45,40 @@ CREATE TABLE [IF NOT EXISTS] [db_name.]table_name (
 10. skp_idx_[Column].idx与skp_idx_[Column].mrk：使用二级索引时生成的二级索引与标记文件，使用二进制格式存储。
 
 ### 数据分区
+
+数据分区是针对本地数据而言的，是对数据的一种纵向切分。
+
+#### 数据的分区规划
+
+MergeTree数据分区的规则由分区ID决定，而具体到每个数据分区所对应的ID，则由分区键的取值决定的。
+
+针对取值数据类型的不同，分区ID的生成逻辑目前拥有四种规则：
+
+1. 不指定分区键：分区ID默认取名为all，所有的数据都会写入到这个all分区
+2. 使用整型：无法转换为日期类型YYYYMMMDD格式的整型，则直接按照该整型的字符串形式输出作为分区ID的取值
+3. 使用日期类型：使用按照YYYYMMDD进行格式化后的字符形式输出，并作为分区ID的取值
+4. 使用其他类型：通过128位Hash算法取其Hash值作为分区ID的取值
+
+如果通过元组的方式使用多个分区字段，则分区ID依旧是根据上述规则生成，只是多个ID之间使用"-"符号依次拼接。
+
+#### 分区目录的命名规则
+
+分区目录的命名：分区ID_最小数据块_最大数据块_目前合并的层级，201905_1_1_0
+
+1. PartitionID：分区ID
+2. MinBlockNum和MaxBlockNum：最小数据块和最大数据块。BlockNum是一个整型的自增长编号，如果其设置为n的话，那么计数n在单张merreTree数据表内全局累加，n从1开始，每当新创建一个分区目录时，计数器n会累加1。当信创建的一个分区目录时，MinBlockNum和MaxBlockNum取值一样，同等于n，当分区发生合并时，MinBlockNum和MaxBlockNum有着另外的取值规则
+3. LEVEL：合并的层级。某个分区被合并过的次数。
+
+#### 分区目录的合并过程
+
+MergeTree的分区目录并不是在时间表被创建之后就存在的，而是在数据写入的过程中被创建的。分区目录建立之后并不是一成不变的，伴随着每一批数据的写入，MergeTree都会生成一批新的分区目录。
+
+即便不同批次写入的数据属于相同分区，也会生成不同的分区目录，对于同一个分区而言，也会存在多个分区目录的情况，之后的某个时刻（写入后的10-15分钟）ClickHouse会通过后台任务将属于相同分区的多个目录合并成一个新的目录。
+
+已经存在的旧分区并不会立即被删除，而是在之后的某个时刻通过后台任务被删除（默认8分钟）。
+
+属于同一分区的多个目录合并成新目录时，新目录名称的合并规则：
+
++ MinBlockNum：取同一分区所有目录中最小的MinBlockNum
++ MaxBlockNum：去同一分区所有目录中最大的MaxBlockNum
++ Level：取同一分区内最大Level值并加1
