--- a/rust/03-生命周期.md
+++ b/rust/03-生命周期.md
@@ -17,7 +17,30 @@
 2. 若只有一个输入生命周期（函数参数中只有一个引用类型），那么该生命周期会被赋给所有的输出生命周期
 3. 若存在多个输入生命周期，且其中一个是`&self`或`&mut self`的生命周期被赋给所有的输出生命周期
 
-#### 静态生命周期
+生命周期消除规则补充
+
+1. `'_` 生命周期表示有一个不使用的生命周期，我们可以忽略它，无需为它创建一个名称
+
+##### 静态生命周期
 
 - 生命周期'static意味着能和程序活得一样久，例如字符串字面量和特征对象
 - 实在遇到解决不了的生命周期标注问题，可以尝试T: 'static，有时候它会给你奇迹
+
+##### NLL规则
+
+- 引用的生命周期从借用处开始，一直持续到最后一次使用的地方
+
+##### 再借用
+
+- 再借用时不会破坏借用规则，但是不能在它的生命周期内再使用原来的借用 
+
+##### &’static
+
+- 一个引用必须要活得跟剩下的程序一样久，才能被标注为 `&'static`
+- &'static` 生命周期针对的仅仅是引用，而不是持有该引用的变量，对于变量来说，还是要遵循相应的作用域规则
+- `&'static` 这个引用指向的数据活得跟程序一样久
+
+##### T: 'static
+
+- T 必须活得和程序一样久
+- T: 'static 只约束了T，不影响 &T，只要确保 `&T` 的生命周期符合规则即可
