--- a/深入探索Go语言/03-函数.md
+++ b/深入探索Go语言/03-函数.md
@@ -57,3 +57,94 @@ Go语言普通函数的调用约定如下：
 
 编译器只有在能够确定变量没有逃逸的情况下，才会将其分配到栈上，在能够确定变量已经逃逸或无法确定到底有没有淘气的情况下，都要按照已经逃逸来处理
 
+### Function Value
+
+当把一个函数赋值给某个变量后，这个变量就被称为`Function Value`
+
+`Function Value`不直接指向目标函数，而是一个目标函数的指针
+
+### 闭包
+
+闭包的典型场景就是在某个函数内定义了另一个函数，内层函数使用了外层函数的局部变量，并且内层函数最终被外层函数作为返回值返回
+
+```go
+struct {
+  F uintptr // 存储目标函数的地址，称为闭包函数 
+  n int     // 闭包的捕获列表，也就是内层函数中用到的所有定义的外层函数中的变量
+}
+```
+
+编译器识别出了闭包这种模式，并自动定义了这个struct类型进行支持，把这种struct称为闭包对象
+
+```go
+func newobject(typ *_type) unsafe.Pointer
+```
+
+Go程序在运行阶段会通过`runtime.newobject()`函数动态分配闭包对象。该函数的返回值是个指针，也就是新分配的对象的地址，参数是个`_type`类型的指针
+
+这个`_type`是个`struct`，在runtime中被用来描述一个数据类型，通过它可以找到目标数据类型的大小，对齐边界，类型名称等，称为类型元数据。Go语言的反射机制以来这些类型元数据
+
+```go
+package main
+
+import (
+	"reflect"
+	"unsafe"
+
+	"github.com/fengyoulin/hookingo"
+)
+
+var hno hookingo.Hook
+
+//go:linkname newobject runtime.newobject
+func newobject(typ unsafe.Pointer) unsafe.Pointer
+
+func fno(typ unsafe.Pointer) unsafe.Pointer {
+	t := reflect.TypeOf(0)
+	(*(*[2]unsafe.Pointer)(unsafe.Pointer(&t)))[1] = typ
+	println(t.String())
+	if fn, ok := hno.Origin().(func(typ unsafe.Pointer) unsafe.Pointer); ok {
+		return fn(typ)
+	}
+	return nil
+}
+
+// 创建一个闭包，make closure
+func mc(start int) func() int {
+	return func() int {
+		start++
+		return start
+	}
+}
+
+func main() {
+	var err error
+	hno, err = hookingo.Apply(newobject, fno)
+	if err != nil {
+		panic(err)
+	}
+	f := mc(10)
+	println(f())
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
